--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -45,6 +45,7 @@
     <sys:Double x:Key="WebExplorerControlHeight">800</sys:Double>
     <sys:Boolean x:Key="GridViewCoverZoomOnHover">False</sys:Boolean>
     <sys:Boolean x:Key="ShowNavigationButtons">True</sys:Boolean>
+    <sys:Double x:Key="TopPanelSearchBoxWidthHelium">500</sys:Double>
     <!--region end-->
     
     <x:Static x:Key="EmptyString" Member="sys:String.Empty" />
