--- a/source/Views/LibraryDetailsView.xaml
+++ b/source/Views/LibraryDetailsView.xaml
@@ -73,6 +73,7 @@
         <Setter Property="Typography.Capitals" Value="AllSmallCaps"/>
         <Setter Property="Padding" Value="0"/>
         <Setter Property="Opacity" Value="0.52"/>
+        <Setter Property="Margin" Value="0,0,0,-1"/>
     </Style>
 
     <Style TargetType="Label" x:Key="ContainerLabel">
